--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g escape-time 0
+
 set -g prefix C-s 
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g status-position top       # macOS / darwin style
