--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
+bind h swap-window -t:-1 \; select-window -t:-1
+bind l swap-window -t:+1 \; select-window -t:+1
+
 # set -g status-left "#[fg=blue,bold,bg=#1e1e2e]   #S   "
 set -g status-left "#[fg=blue,bold]   #S   "
 set -g status-right " #[fg=#b4befe,bold]%a %d %b %y 󱑒 %H:%M"
