--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,8 +38,8 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-bind h swap-window -t:-1 \; select-window -t:-1
-bind l swap-window -t:+1 \; select-window -t:+1
+# bind h swap-window -t:-1 \; select-window -t:-1
+# bind l swap-window -t:+1 \; select-window -t:+1
 
 # set -g status-left "#[fg=blue,bold,bg=#1e1e2e]   #S   "
 set -g status-left "#[fg=blue,bold]   #S   "
