--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set -g detach-on-destroy off     # don't exit from tmux when closing a session
 
 set -g default-terminal 'tmux-256color'
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g focus-events on
 
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
